[package]
name = "uefi-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#log = "0.4"
r-efi = "4.1.0"
#uefi = "0.19"
#uefi-services = "0.16"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"